# fbas-reward-distributor

./: .gitignore  .gitlab-ci.yml  CITATION.cff  Cargo.toml  README.md  node_rank_helpers.rs  rank.rs
.github/workflows/: coverage.yml  lint.yml  test.yml
scripts/: run_mc_performance_tests.sh  run_stellar_performance_tests.sh
src/: lib.rs
src/io/: mod.rs  report.rs
src/rank/: approx_shapley_shubik.rs  exact_shapley_shubik.rs  mod.rs  node_rank.rs  node_rank_helpers.rs  ranking.rs  shapley_shubik.rs  util.rs
src/report/: mod.rs  summary.rs
src/sim/: common.rs  io.rs  mod.rs  stats.rs
src/stats/: common.rs  errors.rs  io.rs  mod.rs  system.rs
src/types/: game.rs  io.rs  mod.rs
test_data/: stellarbeat_nodes_2019-06-01.json
tests/: batch.rs  batch_cli.rs  cli.rs
