[package]
name = "fbas_reward_distributor"
version = "0.1.0"
edition = "2021"
authors = ["Charmaine Ndolo <Charmaine.Ndolo@hu-berlin.de>"]
license = "MIT"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbas_analyzer = { path = "../fbas_analyzer" }
hex = "0.4.3"
structopt = "0.3.26"
sha3 = "0.10.0"
bit-set = "0.5.2"
itertools = "0.10.3"
rug = "1.15.0"

[dev-dependencies]
approx = "0.5.1"
