[package]
name = "fbas_reward_distributor"
version = "0.1.0"
edition = "2021"
authors = ["Charmaine Ndolo <Charmaine.Ndolo@hu-berlin.de>"]
license = "MIT"
readme = "./README.md"
default-run = "reward_distributor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "reward_distributor"
path = "src/bin/node_influence.rs"
required-features = ["cli"]

[[bin]]
name = "performance_tests"
path = "src/bin/batch_performance_eval.rs"
required-features = ["measurements"]

[[bin]]
name = "approximation_tests"
path = "src/bin/batch_error_eval.rs"
required-features = ["measurements"]

[features]
default = ["cli"]
cli = ["structopt"]
batch = ["par-map", "log", "env_logger"]
measurements = ["cli", "batch"]

[dependencies]
fbas_analyzer = { path = "../fbas_analyzer", default-features = false, features = ["qsc-simulation"]}
hex = "0.4.3"
structopt = {version = "0.3.26", optional = true}
sha3 = "0.10.0"
bit-set = "0.5.2"
itertools = "0.10.3"
rug = "1.15.0"
rand = "0.8.5"
csv = "1.1"
par-map = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
log = {version = "0.4", optional = true}
env_logger = {version = "0.9", optional = true}

[dev-dependencies]
approx = "0.5.1"
assert_cmd = "2.0.4"
predicates = "2.1.1"
criterion = "0.3"
